chapitres/5/deployment-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-healthcheck
  name: flask-healthcheck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-healthcheck
  template:
    metadata:
      labels:
        app: flask-healthcheck
    spec:
      containers:
      - image: yannig/eni-flask-healthcheck
        name: flask-healthcheck
        startupProbe: &probe
          httpGet:
            path: /healthcheck
            port: 5000
        readinessProbe: *probe
        livenessProbe: *probe
