chapitres/5/mailhog-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mailhog
    spec:
      containers:
      - image: mailhog/mailhog
        name: mailhog
        resources: {}
status: {}
