chapitres/5/mailpit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mailpit
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
      - image: axllent/mailpit
        name: mailpit
        resources:
          requests:
            memory: "6Mi"
            cpu: "250m"
          limits:
            memory: "6Mi"
            cpu: "500m"
