chapitres/5/mailpit-tcp-port.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mailpit
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
      - image: axllent/mailpit
        name: mailpit
        readinessProbe:
          tcpSocket:
            port: 1025
        livenessProbe:
          tcpSocket:
            port: 8025
