chapitres/5/mailhog-ingress-nip-io.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "mailhog.192.168.122.67.nip.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: mailhog
          servicePort: 8025
