chapitres/5/mailhog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mailhog
          servicePort: 8025
